Fix visible menu item on mobile

--- a/sass/views/_diary.scss
+++ b/sass/views/_diary.scss
@@ -13,8 +13,10 @@
 }
 
 // Active diary link
-.single-diary .menu-item-26435 a {
-  opacity: 1;
+@media (min-width: $responsivenav) {
+  .single-diary .menu-item-26435 a {
+    opacity: 1;
+  }
 }
 
 body.post-type-archive-diary,
